# ny_court_motions

./: README.md  pyproject.toml  scrape.py
data/: judge_stats.csv
data/raw/: 1-2024_to_5-2024_cases.csv
