[tool.poetry]
name = "ny-court-motions"
version = "0.1.0"
description = "This extracts data for NY Court of Appeals motions for criminal leave."
authors = ["edwisdom <22333941+edwisdom@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pandas = "2.1.3"
beautifulsoup4 = "4.12.2"
tqdm = "4.66.1"
aiohttp = "3.9.1"
tenacity = "8.3.0"
fake-useragent="1.5.1"
free-proxy="1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
